--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "angular2-recaptcha": "^0.3.2",
     "angularfire2": "^2.0.0-beta.5",
+    "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "firebase": "^3.5.2",
+    "ng2-bootstrap": "^1.1.16",
+    "primeng": "^1.0.0-beta.20",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
