--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "@angular/common": "~2.1.0",
     "@angular/compiler": "~2.1.0",
+    "@angular/compiler-cli": "^2.1.2",
     "@angular/core": "~2.1.0",
     "@angular/forms": "~2.1.0",
     "@angular/http": "~2.1.0",
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/platform-server": "^2.1.2",
     "@angular/router": "~3.1.0",
     "angular2-recaptcha": "^0.3.2",
     "angularfire2": "^2.0.0-beta.5",
