--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/platform-server": "^2.1.2",
     "@angular/router": "~3.1.0",
+    "angular2-fontawesome": "^0.7.0",
     "angular2-recaptcha": "^0.3.2",
     "angularfire2": "^2.0.0-beta.5",
     "bootstrap": "^4.0.0-alpha.5",
