--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular2-fontawesome": "^0.7.0",
     "angular2-recaptcha": "^0.3.2",
     "angularfire2": "^2.0.0-beta.5",
+    "angulartics2": "^1.4.2",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "firebase": "^3.5.2",
